--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,11 @@
 }
 .upload__button {
 	display: inline-block;
-
 	height: fit-content;
-
-	background-color: #4CAF50;
-	border: none;
-	border-radius: 4px;
-	color: white;
-
-	padding: 16px 32px;
-
-	text-align: center;
-	text-decoration: none;
-
-	cursor: pointer;
+	padding: 0;
+}
+.upload__label {
+	padding: 1px 6px;
 }
 .upload__input {
 	display: none;
