--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 .root {
 	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+
 	width: 100vw;
 	height: 100vh;
 
 	padding-top: 10px;
 }
+
 .upload__button {
 	display: inline-block;
 	height: fit-content;
@@ -15,4 +19,9 @@
 }
 .upload__input {
 	display: none;
+}
+
+.preview {
+	display: flex;
+	margin: 16px 0;
 }
